--- a/src/Components/InventoryItem/InventoryItem.scss
+++ b/src/Components/InventoryItem/InventoryItem.scss
@@ -7,7 +7,10 @@
   flex-direction: column;
   padding-top: 1rem;
   padding-bottom: 1rem;
-  border-bottom: 0.063rem solid $secondary-cloud;
+  padding-left: 0;
+  padding-right: 0;
+  margin: 0;
+  border-bottom: 0.0625rem solid $secondary-cloud;
   white-space: nowrap;
 
   @include tablet {
@@ -20,20 +23,22 @@
   &__box {
     display: flex;
     flex-direction: column;
+    padding-left: 1rem;
+    padding-right: 1rem;
 
     @include tablet {
       flex-direction: row;
       margin: 0;
-      padding: 0;
+      padding-left: 2.25rem;
+      padding-right: 2.25rem;
     }
   }
 
   &__container {
     @include tablet {
       display: flex;
-      flex-direction: row;
-      margin: 0;
-      padding: 0;
+      flex-direction: row;  
+      padding-left: 2.25rem;    
     }
   }
 
@@ -41,10 +46,6 @@
     display: flex;
     flex-direction: row;
     gap: 6rem;
-    @include tablet {
-      margin: 0;
-      padding: 0;
-    }
   }
 
   &__details {
@@ -53,9 +54,7 @@
     @include tablet {
       display: flex;
       flex-direction: row;
-      gap: 2rem;
-      margin: 0;
-      padding: 0;
+      gap: 2.25rem;
     }
   }
 
@@ -71,10 +70,6 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    @include tablet {
-      margin: 0;
-      padding: 0;
-    }
   }
 
   &__value {
@@ -112,9 +107,8 @@
       flex-direction: row;
       align-items: baseline;
       gap: 1rem;
-      padding-top: 0.5rem;
       margin: 0;
-      padding: 0;
+      padding-right: 2.25rem;
     }
   }
 }
@@ -147,16 +141,16 @@
 
     .inventory__container {
       display: flex;
-      flex-basis: 80%;
+      flex-basis: 85%;
       width: 100%;
 
       .inventory__wrapper {
         display: flex;
-        flex-basis: 80%;
+        flex-basis: 100%;
 
         .inventory__details-left {
           display: flex;
-          flex-basis: 60%;
+          flex-basis: 50%;
 
           .inventory__item {
             display: flex;
@@ -170,29 +164,29 @@
 
         .inventory__details-right {
           display: flex;
-          flex-basis: 40%;
+          flex-basis: 50%;
 
           .inventory__status {
             display: flex;
-            flex-basis: 70%;
+            flex-basis: 60%;
           }
 
           .inventory__quantity {
             display: flex;
-            flex-basis: 30%;
+            flex-basis: 40%;
           }
         }
       }
 
       .inventory__warehouse {
         display: flex;
-        flex-basis: 20%;
+        flex-basis: 15%;
       }
     }
 
     .inventory__actions {
       flex: 10%;
-      justify-content: center;
+      justify-content: flex-end;
     }
   }
 }
